--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && scp -r ./build/* romansitun@51.250.96.174:/home/romansitun/react-mesto-auth",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
